# P4

./: .directory  .gitignore  .gitmodules  README.md  blk  frames.gv  test.txt  tests.txt
Dependencies/: Vision  installPackagesForShapefitting.sh
devel/: .catkin  .rosinstall  setup.sh
devel/lib/kinova_arm_moveit_demo/: motion_plan  pick_place  test_accuracy  work_scene
devel/lib/kinova_driver/: gripper_command_action_server  joint_trajectory_action_server  kinova_arm_driver  kinova_interactive_control  kinova_tf_updater
devel/lib/pkgconfig/: ds4_driver.pc  j2n6s300_ikfast.pc  j2n6s300_moveit_config.pc  j2s6s300_ikfast.pc  j2s6s300_moveit_config.pc  j2s7s300_ikfast.pc  j2s7s300_moveit_config.pc  jaco.pc  kinova_arm_moveit_demo.pc  kinova_bringup.pc  kinova_control.pc  kinova_demo.pc  kinova_description.pc  kinova_driver.pc  kinova_gazebo.pc  kinova_msgs.pc  m1n6s300_ikfast.pc  m1n6s300_moveit_config.pc
devel/lib/python2.7/dist-packages/ds4_driver/: __init__.py
devel/lib/python2.7/dist-packages/kinova_demo/: __init__.py
devel/share/ds4_driver/cmake/: ds4_driver-msg-extras.cmake  ds4_driver-msg-paths.cmake  ds4_driverConfig.cmake
devel/share/j2n6s300_ikfast/cmake/: j2n6s300_ikfastConfig.cmake
devel/share/j2n6s300_moveit_config/cmake/: j2n6s300_moveit_configConfig.cmake
devel/share/j2s6s300_ikfast/cmake/: j2s6s300_ikfastConfig.cmake
devel/share/j2s6s300_moveit_config/cmake/: j2s6s300_moveit_configConfig.cmake
devel/share/j2s7s300_ikfast/cmake/: j2s7s300_ikfastConfig.cmake
devel/share/j2s7s300_moveit_config/cmake/: j2s7s300_moveit_configConfig.cmake
devel/share/jaco/cmake/: jacoConfig.cmake
devel/share/kinova_arm_moveit_demo/cmake/: kinova_arm_moveit_demoConfig.cmake
devel/share/kinova_bringup/cmake/: kinova_bringupConfig.cmake
devel/share/kinova_control/cmake/: kinova_controlConfig.cmake
devel/share/kinova_demo/cmake/: kinova_demoConfig.cmake
devel/share/kinova_description/cmake/: kinova_descriptionConfig.cmake
devel/share/kinova_driver/cmake/: kinova_driverConfig.cmake
devel/share/kinova_gazebo/cmake/: kinova_gazeboConfig.cmake
devel/share/kinova_msgs/cmake/: kinova_msgs-msg-paths.cmake  kinova_msgsConfig.cmake
devel/share/m1n6s300_ikfast/cmake/: m1n6s300_ikfastConfig.cmake
devel/share/m1n6s300_moveit_config/cmake/: m1n6s300_moveit_configConfig.cmake
devel/share/roseus/ros/ds4_driver/: manifest.l
devel/share/roseus/ros/kinova_msgs/: manifest.l
src/: .directory
src/jaco/: CMakeLists.txt  package.xml  setup.py
src/jaco/action/: IF_fullAuto.action
src/jaco/include/: jaco_control.h  jaco_trajectory.h
src/jaco/include/libraries/: customVector.h
src/jaco/launch/: Main_Launch.launch  kinova_test.launch  turtle.launch
src/jaco/msg/: DepthImage.msg  obj_pos.msg  position.msg  sys_msg.msg
src/jaco/scripts/: OpencvFeature.py  RAWitonguetalker.py  jacoScript.py  test.py
src/jaco/src/: CameraSplitter.cpp  interface.cpp  interface_screen.cpp  jaco_control.cpp  jaco_trajectory.cpp  scenario_full_automatic.cpp  scenario_semi_automatic.cpp  shapefitting.cpp  tester2.cpp
src/jaco/src/libraries/: customVector.cpp
src/launch/: Main_Launch.launch  turtle.launch
src/shapefitting/: CMakeLists.txt  package.xml
src/shapefitting/action/: shapefitting_position.action  shapefitting_position_array.action
src/shapefitting/include/: shapefitting.h  shapefitting_simple.h
src/shapefitting/msg/: s_position.msg  shape_data.msg  shape_data_array.msg
src/shapefitting/src/: shapefitting.cpp  shapefitting_simple.cpp  tester.cpp
src/test/: package.xml
src/vision/: CMakeLists.txt  package.xml
src/vision/Glasses/test/labels/: IMG_1469_jpg.rf.2959efff853abccba6b4ed303313a73b.txt  IMG_1474_jpg.rf.96d70111f6a93ebf58377faebe584451.txt  IMG_1476_jpg.rf.b6b9c7a2cc07c73d84d94bed9f14519f.txt  IMG_1478_jpg.rf.5c6442abf45ddaffa414f80e9fc25b21.txt  IMG_1493_jpg.rf.7075b7bfded9c5f3e124c914a14ed88f.txt  IMG_1537_jpg.rf.3325c70743785ee3daa30d741037ebc7.txt  IMG_1540_jpg.rf.1cbf29d09703b5e1c7796d9995e7c8ac.txt  IMG_1541_jpg.rf.6a64f99c6af0adb1568aa845263675a9.txt  IMG_1549_jpg.rf.6c5033ab355c3c3a8bcf809771d2715e.txt  IMG_1551_jpg.rf.cab77f1aaf1915add992e9dbdde0b431.txt  IMG_1552_jpg.rf.83489f2f561f486c1249ecf0a5144f0b.txt  IMG_1564_jpg.rf.1175b01927e9e97dffd461667429258a.txt  IMG_1569_jpg.rf.c44722f6a6aab5fc7d6eb68f01105d33.txt  IMG_1572_jpg.rf.1378b858789418dd195b2d170eec089b.txt  IMG_1582_jpg.rf.07aea4a391556244c28371a85ceeec35.txt  IMG_1584_jpg.rf.2ccb4e64030c06f3d8a2ba24267f89a6.txt  IMG_1593_jpg.rf.9104b734134928f7a249f21c6054152f.txt  IMG_1598_jpg.rf.b7467a88fbcd872fcf58434cbd5c1138.txt  IMG_1608_jpg.rf.152be858ea492032b7c2728e76fbcebb.txt  IMG_1615_jpg.rf.a14c1f09114590b243db38f9adfe8025.txt  IMG_1627_jpg.rf.4d31d46b1a79f287b311f60365d84f80.txt
src/vision/Glasses/train/: labels.cache
src/vision/Glasses/train/labels/: IMG_1434_jpg.rf.abb80fde70bc1bc10aab667b29c5782b.txt  IMG_1434_jpg.rf.d51d13223ebf5f5500a4a767399f12eb.txt  IMG_1434_jpg.rf.f731d3d55a00a300031db7d960eeafd0.txt  IMG_1436_jpg.rf.7b7ba8a9e3f0adc290413345b5bd3a52.txt  IMG_1436_jpg.rf.7e10f6981711c86a6c6ca3174a3013b8.txt  IMG_1436_jpg.rf.fb91cd524d7f3db8436af5f4d8c396e0.txt  IMG_1437_jpg.rf.4f8f47ffc7ae8349682eb69efdbd738a.txt  IMG_1437_jpg.rf.bd89abc4d412c355583457c54c95341b.txt  IMG_1437_jpg.rf.f24703ab8add352c0482c11be2e8ff5f.txt  IMG_1438_jpg.rf.2706cda695a8ea890829954adc102142.txt  (+412 more)
src/vision/Glasses/valid/: labels.cache
src/vision/MalkImages/: README.roboflow.txt
src/vision/MalkImages/train/: labels.cache
src/vision/MalkImages/valid/: labels.cache
src/vision/Opencv/: pick.cpp  pick.py  test.py
src/vision/Opencv/opencv2/: cvconfig.h  opencv_modules.hpp
src/vision/cfg/: yolov5m.yaml
src/vision/data/: Project.yaml  drinks.yaml  glasses.yaml  milk.yaml
src/vision/launch/: detect.launch
src/vision/msg/: Detection.msg  Detection_array.msg
src/vision/scripts/: OpencvFeature.py  pick.py  test.py
src/vision/src/: Deformation.cpp  OpencvFeature.py
src/vision/src/yolov5/: =1.8.1  bridgetest.py  detect.py  pick.py  requirements.txt
src/vision/srv/: detect_srv.srv
(+128 files in other folders)
